--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -8,14 +8,14 @@
   "theme_color": "#121212",
   "icons": [
     {
-      "src": "assets/icons/icon-192.png",
+      "src": "assets/icons/icon-192.webp",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png/webp"
     },
     {
-      "src": "assets/icons/icon-512.png",
+      "src": "assets/icons/icon-511.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png/webp"
     }
   ]
 }
