--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png/webp"
     },
     {
-      "src": "assets/icons/icon-511.png",
+      "src": "assets/icons/icon-511.webp",
       "sizes": "512x512",
       "type": "image/png/webp"
     }
