--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -10,12 +10,12 @@
     {
       "src": "assets/icons/icon-192.webp",
       "sizes": "192x192",
-      "type": "image/png/webp"
+      "type": "image/webp"
     },
     {
-      "src": "assets/icons/icon-511.webp",
+      "src": "assets/icons/icon-512.webp",
       "sizes": "512x512",
-      "type": "image/png/webp"
+      "type": "image/webp"
     }
   ]
 }
