--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#000000ff",
+  "theme_color": "#ffffff",
   "icons": [
     {
       "src": "assets/icons/icon-192.png",
